2002-10-18 Zoran Constantinescu <zoran@idi.ntnu.no>
	* Added MD5 sum.

2002-06-10 Zoran Constantinescu <zoran@idi.ntnu.no>
	* Added LICENSE entry.
	  Tested with gcc3 is ok.

2002-05-07 Zoran Constantinescu <zoran@idi.ntnu.no>
	* Created spell.
