@@ -1,3 +1,3 @@
-depends  pvm      &&
-depends  tcl      &&
+depends  pvm  &&
+depends  tcl  &&
 depends  tk
