@@ -1,15 +1,14 @@
            SPELL=xpvm
          VERSION=1.2.5
           SOURCE=XPVM.src.$VERSION.tgz
-          MD5[0]=fde49cb15608c0736c1e6ebd60ce2ea7
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL
    SOURCE_URL[0]=http://www.netlib.org/pvm3/$SPELL/$SOURCE
+          MD5[0]=fde49cb15608c0736c1e6ebd60ce2ea7
         WEB_SITE=http://www.netlib.org/utk/icl/xpvm/xpvm.html
          ENTERED=20020507
          UPDATED=20020507
-      MAINTAINER=zoran@idi.ntnu.no
-         LICENSE=FREE
-           SHORT="graphical interface to the PVM console commands and information."
+      LICENSE[0]=FREE
+           SHORT="graphical interface to the PVM console"
 cat << EOF
 XPVM provides a graphical interface to the PVM console commands and information, along with several animated views to monitor the execution of PVM programs. These views provide information about the interactions among tasks in a parallel PVM program, to assist in debugging and performance tuning. 
 EOF
