@@ -15,9 +15,9 @@
  #TCLLIBDIR	=	-L$(TCLTKHOME)
  #TKLIBDIR	=	-L$(TCLTKHOME)
  
-+# Tcl / Tk 8.3
-+TCLLIB		=	-ltcl8.3
-+TKLIB		=	-ltk8.3
++# Tcl / Tk 8.4
++TCLLIB		=	-ltcl8.4
++TKLIB		=	-ltk8.4
  # Tcl / Tk 8.1
  #TCLLIB		=	-ltcl8.1
  #TKLIB		=	-ltk8.1
