@@ -1,9 +1,18 @@
+2004-05-20 Eric Sandall <eric@sandall.us>
+	* xpvm-1.2.5.patch: Updated fo tcl/tk 8.4  (Bug #6068)
+	* HISTORY: Formatted to Guru Handbook
+	* DEPENDS: Cleaned up extra spacing
+	* DETAILS: Formatted to Guru Handbook
+	Removed MAINTAINER
+	Changed LICENSE to LICENSE[0]
+	Shortened SHORT description
+
 2002-10-18 Zoran Constantinescu <zoran@idi.ntnu.no>
-	* Added MD5 sum.
+	* DETAILS: Added MD5 sum.
 
 2002-06-10 Zoran Constantinescu <zoran@idi.ntnu.no>
-	* Added LICENSE entry.
-	  Tested with gcc3 is ok.
+	* DETAILS: Added LICENSE entry.
+	* USEGCC2: Removed
 
 2002-05-07 Zoran Constantinescu <zoran@idi.ntnu.no>
 	* Created spell.
